# sandtimer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
include/: SandTimerManager.h  SandTimerWindow.h  SocketServer.h
src/: SandTimerManager.cpp  SandTimerWindow.cpp  SocketServer.cpp  main.cpp
